--- a/th-dict-discovery.cabal
+++ b/th-dict-discovery.cabal
@@ -16,7 +16,7 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:
+  exposed-modules: Language.Haskell.Discovery
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.9 && <4.10, template-haskell, constraints
