--- a/th-dict-discovery.cabal
+++ b/th-dict-discovery.cabal
@@ -57,6 +57,6 @@ library
   exposed-modules: Language.Haskell.Discovery
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.9 && <4.10, template-haskell, constraints
+  build-depends:       base >=4.9 && <=5.0, template-haskell, constraints
   hs-source-dirs:      src
   default-language:    Haskell2010
